Changed bootstrap grid layout on flowchart, which slighly improves spacing, but isn't really a long-term fix

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,4 @@
+
 .row {
 	width: 100%;
 }
@@ -53,6 +54,8 @@ strong {
 
 .tile-wrapper {
     height: 780px;
+    /*position: absolute;*/
+    left: 30%;
     /*opacity: 0.2;*/
 }
 
